tests/netlist/linear-non-005/expected
Example Non-Linearly Wired Circuits
Input is dangling
## Circuits
```
// LOG : Starting NetList 
// (Port output logic "out" (Port input logic "left" (Port input logic "right" (Gate "n1" (GateB nand (Shim output (Var out)) (Shim input (Var left)) (Shim input (Var left))) (Stop)))))
// LOG : Parsing Successful
// (Port output logic (Port input logic (Port input logic (Gate (GateB nand (Var 2) (Var 1) (Var 1)) Stop))))
// LOG : Type Checking Complete
// LOG : Soundness Error:
digraph G {
3 [label="IN(1) INPUT : logic"];
2 [label="IN(1) INPUT : logic"];
1 [label="OUT(1) OUTPUT : logic"];
4 [label="(2, 1) nand"];
	2 -> 4;
	2 -> 4;
	4 -> 1;
}

//because:
// Vertex 3
//  has expected degree OUT 1
//  but we found degree OUT 0


```
## Verilator
```
%Warning-UNUSEDSIGNAL: ../../shared/linear-non/DanglingInput.sv:3:30: Signal is not used: 'right'
                                                                    : ... In instance DanglingInput
    3 |               , input  logic right
      |                              ^~~~~
                       ... For warning description see https://verilator.org/warn/UNUSEDSIGNAL?v=5.002
                       ... Use "/* verilator lint_off UNUSEDSIGNAL */" and lint_on around source to disable this message.
%Error: Exiting due to 1 warning(s)
```
